--- a/reqreading.html
+++ b/reqreading.html
@@ -21,7 +21,7 @@
             <ul class="nav_links">
                 <li><a class="active" href="index.html"><strong>Home</strong></a></li>
                 <li><a class="active" href="reqreading.html"><strong>Links/Reads</strong></a></li>
-                <li><a class="active" href="about.html"><strong>About</strong></a></li>
+                <li><a class="active" href="about.html"><strong>Min Projects</strong></a></li>
         
             </ul>
             <img class="img" src="Images/UnD.png">
