--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="Stylesheet" href="Style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet"> 
     <title>Un_Defined</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
@@ -19,9 +21,9 @@
                 <i class="fas fa-bars"></i>
             </label>
             <ul class="nav_links">
-                <li><a class="active" href="index.html"><strong>Home</strong></a></li>
-                <li><a class="active" href="reqreading.html"><strong>Links/Reads</strong></a></li>
-                <li><a class="active" href="about.html"><strong>Mini Projects</strong></a></li>
+                <li><a class="active" href="Home.html"><strong>Home</strong></a></li>
+                <li><a class="active" href="Links.html"><strong>Links/Reads</strong></a></li>
+                <li><a class="active" href="MiniProjects.html"><strong>Mini Projects</strong></a></li>
         
             </ul>
             <img class="img" src="Images/UnD.png">
@@ -116,6 +118,26 @@ Web blog hosted by GitHub to whatever mutation I’ve fathered in at 9.0.
             </p>
             <p>
                 Next on The Odin Project for me: Rock, Paper, Scissors in JavaScript. Hooray...
+            </p>
+
+            <p> <strong>Edit:</strong>
+                So unfortunately the site as I has had setup from this point was not running.
+                I was getting this message when I believed I should be able to access it.
+                Looking back at how to point a google domain to GitHub pages I realised I was missing the step
+                involving any IP address (GitHub’s). And  as much as it brings pangs about mine heart
+                the easiest way to rectify this issue was to cave in to Big Tech and use Google Domains
+                just like the tutorial. However the DynaDot UI wasn’t half as clear or easy to use.
+                Google Domains should’ve been a no-brainer maybe?
+            </p>
+            <div class="ErrorImgContainer">
+            <img src="Images/ErrorImg.png" class="Errorimg">
+            </div>
+            <p>
+                Also, when troubleshooting, <a href="https://docs.github.com/en/free-pro-team@latest/github/working-with-github-pages/managing-a-custom-domain-for-your-github-pages-site#configuring-a-subdomain" target="_blank">the GitHub Docs page</a> already had everything outlined. But I had overlooked it.
+                The lesson learnt here being the documentation provided should probably be checked regardless of whether
+                you believe you know what you’re doing or not. In this case I could’ve saved myself from unnecessarily
+                buying undefined.london which I still own; I have no doubt overspent now. However since undefined.london
+                is mine for the year and I prefer it to nicodeth.me, I might switch at some point with some more understanding.
             </p>
 
 
