--- a/about.html
+++ b/about.html
@@ -6,7 +6,9 @@
     <link rel="Stylesheet" href="Style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@700&display=swap" rel="stylesheet">
-    <title>Un_Defined</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet"> 
+     <title>Un_Defined</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
