--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Stylesheet" href="Style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet"> 
-    <title>Un_Defined</title>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Personal Blog Website">
+        <meta name="keywords" content="Blog">
+        <meta name="author" content="Nico Deth">
+        <link rel="Stylesheet" href="Style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet"> 
+        <title>Un_Defined</title>
+        <link rel="icon" href="Images/UnD.png" type="image/png">
+        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    </head>
 <body>
     <header>
         
@@ -21,9 +25,9 @@
                 <i class="fas fa-bars"></i>
             </label>
             <ul class="nav_links">
-                <li><a class="active" href="Home.html"><strong>Home</strong></a></li>
-                <li><a class="active" href="Links.html"><strong>Links/Reads</strong></a></li>
-                <li><a class="active" href="MiniProjects.html"><strong>Mini Projects</strong></a></li>
+                <li><a class="active" href="index"><strong>Home</strong></a></li>
+                <li><a class="active" href="Links"><strong>Links/Reads</strong></a></li>
+                <li><a class="active" href="MiniProjects"><strong>Mini Projects</strong></a></li>
         
             </ul>
             <img class="img" src="Images/UnD.png">
