--- a/Links.html
+++ b/Links.html
@@ -25,9 +25,9 @@
                 <i class="fas fa-bars"></i>
             </label>
             <ul class="nav_links">
-                <li><a class="active" href="index.html"><strong>Home</strong></a></li>
-                <li><a class="active" href="Links.html"><strong>Links/Reads</strong></a></li>
-                <li><a class="active" href="MiniProjects.html"><strong>Mini Projects</strong></a></li>
+                <li><a class="active" href="index"><strong>Home</strong></a></li>
+                <li><a class="active" href="Links"><strong>Links/Reads</strong></a></li>
+                <li><a class="active" href="MiniProjects"><strong>Mini Projects</strong></a></li>
         
             </ul>
             <img class="img" src="Images/UnD.png">
