--- a/MiniProjects.html
+++ b/MiniProjects.html
@@ -25,7 +25,7 @@
                 <i class="fas fa-bars"></i>
             </label>
             <ul class="nav_links">
-                <li><a class="active" href="index"><strong>Home</strong></a></li>
+                <li><a class="active" href="Home"><strong>Home</strong></a></li>
                 <li><a class="active" href="Links"><strong>Links/Reads</strong></a></li>
                 <li><a class="active" href="MiniProjects"><strong>Mini Projects</strong></a></li>
         
