--- a/Links.html
+++ b/Links.html
@@ -75,6 +75,13 @@
                     <p class="LinkLine"><i class="far fa-play-circle"></i>
                         <a href="https://www.youtube.com/watch?v=T9EI2PrDpmw&t=851s" target="_blank">Money diversity</a> - Bernard Lietaer
                     </p>
+                    <p class="LinkLine"><i class="far fa-newspaper"></i>
+                        <a href="http://www.mindcontagion.org/worgl/worgl1.html" target="_blank">An Experiment in Wörgl
+</a> - John Doe
+<p class="LinkLine"><i class="far fa-newspaper"></i><span> / </span><i class="far fa-file-audio"></i>
+    <a href="https://text.npr.org/458222801" target="_blank">How Four Drinking Buddies Saved Brazil
+</a> - Chana Joffe-Walt
+                    </p>
                     <p>
                 
                     </p>
